--- a/LP1/index.html
+++ b/LP1/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <!-- Judul -->
-    <h1>"My Shoes" Contest Entry Form</h1>
+    <!-- <h1>"My Shoes" Contest Entry Form</h1> -->
 
     <!-- deskripsi -->
     
